Incorporated jquery.js code

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Your Awesome Webpage</title>
+    <title>Time Capsule</title>
+    <script src="lib/jquery.js" ></script>
+    <script src="http://popcornjs.org/code/dist/popcorn-complete.min.js"></script>
   </head>
   <body>
     <video id="ourvideo" controls width="80%" height="100" class="video-js vjs-default-skin" preload="auto" >
