--- a/tclayout/tc1.html
+++ b/tclayout/tc1.html
@@ -1,1 +1,66 @@
-<!doctype html><!--[if lt IE 7]> <html class="ie6 oldie"> <![endif]--><!--[if IE 7]>    <html class="ie7 oldie"> <![endif]--><!--[if IE 8]>    <html class="ie8 oldie"> <![endif]--><!--[if gt IE 8]><!--><html class=""><!--<![endif]--><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Untitled Document</title><link href="boilerplate.css" rel="stylesheet" type="text/css"><link href="css/layout.css" rel="stylesheet" type="text/css"><!-- To learn more about the conditional comments around the html tags at the top of the file:paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/Do the following if you're using your customized build of modernizr (http://www.modernizr.com/):* insert the link to your js here* remove the link below to the html5shiv* add the "no-js" class to the html tags at the top* you can also remove the link to respond.min.js if you included the MQ Polyfill in your modernizr build --><!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="respond.min.js"></script></head><body><div class="gridContainer clearfix">  <div id="ourvideo">    <video id="ourvideo" controls width="80%" height="100" class="video-js vjs-default-skin" preload="auto" >      <source src="http://mobileratchet.co/media/hls/RandomStuff.m3u8" />      <source src="http://mobileratchet.co/media/Chime.mp4" type="video/mp4" />    </video>  </div>  <div id="annotationsection">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>  <div id="tweets">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div></div></body></html>
+<!doctype html>
+<!--[if lt IE 7]> <html class="ie6 oldie"> <![endif]-->
+<!--[if IE 7]>    <html class="ie7 oldie"> <![endif]-->
+<!--[if IE 8]>    <html class="ie8 oldie"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="">
+<!--<![endif]-->
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Time Capsule</title>
+<link rel="stylesheet" href="twitterfeed-jquery.css">
+<!--twitterfeed-jquery downloaded from http://blog.ninanet.com/2010/04/14/twitter-feed-with-jquery-->
+<script language="JavaScript" type="text/javascript" src="http://cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>
+<link href="boilerplate.css" rel="stylesheet" type="text/css">
+<link href="css/layout.css" rel="stylesheet" type="text/css">
+<!-- 
+To learn more about the conditional comments around the html tags at the top of the file:
+paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/
+
+Do the following if you're using your customized build of modernizr (http://www.modernizr.com/):
+* insert the link to your js here
+* remove the link below to the html5shiv
+* add the "no-js" class to the html tags at the top
+* you can also remove the link to respond.min.js if you included the MQ Polyfill in your modernizr build 
+-->
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+
+</head>
+<body>
+<div class="gridContainer clearfix">
+
+  <div id="ourvideo">
+    <video id="ourvideo" controls width="80%" height="100" class="video-js vjs-default-skin" preload="auto" >
+      <source src="http://mobileratchet.co/media/hls/RandomStuff.m3u8" />
+      <source src="http://mobileratchet.co/media/Chime.mp4" type="video/mp4" />
+    </video>
+  </div>
+  <div id="annotationsection">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
+  
+  
+  <div id="tweets">
+  <script language="JavaScript">
+	$.getJSON("https://twitter.com/statuses/user_timeline.json?screen_name=jimbweb&count=5&callback=?",//Replace name with twitter user name
+ 		function(data){
+			$.each(data, function(i,item){
+				ct = item.text;
+				mytime = item.created_at;
+				var strtime = mytime.replace(/(\+\S+) (.*)/, '$2 $1')
+				var mydate = new Date(Date.parse(strtime)).toLocaleDateString();
+				var mytime = new Date(Date.parse(strtime)).toLocaleTimeString();		
+
+				ct = ct.replace(/http:\/\/\S+/g,  '<a href="$&" target="_blank">$&</a>');
+			    ct = ct.replace(/\s(@)(\w+)/g,    ' @<a href="http://twitter.com/$2" target="_blank">$2</a>');
+			    ct = ct.replace(/\s(#)(\w+)/g,    ' #<a href="http://search.twitter.com/search?q=%23$2" target="_blank">$2</a>');
+				$("#jim4web").append('<div>'+ct + " <small><i>(" + mydate + " @ " + mytime + ")</i></small></div>"); //Replace the twitter name at the start of this line.
+ 			});
+		});
+</script>	
+
+<div class="twitter" id="jim4web"></div><!--Replace twitter name to title id properly-->
+</div>
+</body>
+</html>
