Fix background image
moved css body styles back to the html file.

--- a/tclayout2/time_capsule.html
+++ b/tclayout2/time_capsule.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" type="text/css" href="css/reset.css" />
 
-<link href="css/ipadlandscape.css" rel="stylesheet" media="only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) ">
+<!--<link href="css/ipadlandscape.css" rel="stylesheet" media="only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) ">-->
 
 <link rel="stylesheet" type="text/css" href="css/time_capsule_style.css" />
 
@@ -12,7 +12,13 @@
 
 <script language="JavaScript" type="text/javascript" src="http://cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>
 <script src="http://popcornjs.org/code/dist/popcorn-complete.min.js"></script>
-
+<style type="text/css">
+body {
+	background-color: #003366;
+	background-image: url(images/clokbkg.png);
+	background-repeat: no-repeat;
+	font-size: 100%;
+}</style>
 <title>Time Capsule</title>
 </head>
 <body>
